visibility fix

--- a/BattleGame.css
+++ b/BattleGame.css
@@ -42,7 +42,7 @@
 	align-content: center;
 	text-align: center;
 	padding: 10px;
-	height: 100px;
+	height: 130px;
 	visibility: collapse;
 }
 
